Bug 1480618 - Cloning node for Range APIs should be in tree order; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D3216

--HG--
extra : moz-landing-system : lando